Updates from Overleaf

--- a/literature.tex
+++ b/literature.tex
@@ -133,8 +133,10 @@ There are two papers that use the same data:
     
     \item \textcite{boehm_intermediation_2024} studies how the choice of financial product is affected by intermediaries (brokers) who provide information but also create an agency problem. There are two main differences with our case: 1) they study the decision of financial product whereas we focus on the decision of which offer to accept given the choice of financial product and 2) they do not provide a model of supply whereas we model the insurer competition. 
 \end{enumerate}
-Both of this paper put a lot of emphasis on the life-cycle problem, the bequest motive and provide microfoundation for the discrete choice between annuities and PW, but none of them makes use of the fact that we observe the full choice set of the consumer. 
+Both of this paper put a lot of emphasis on the life-cycle problem(consumption-savings problem), where individuals have a bequest motive, they are risk averse and there is uncertainty over their lifespan. Both papers provide microfoundations for the discrete choice between annuities and PW, but none of them makes use of the fact that we observe the full choice set of the consumer. 
 
+I think they need to add this structure to consider the substitution patterns between the different types of products. 
+If we were to restrict ourselves to the purchase of annuities then 1. we can ignore bequest motives and 2. since the products are comparable we could put more emphasis on the choice of firms instead of products. 
 
 
 
