--- a/old_files/draft.tex
+++ b/old_files/draft.tex
@@ -94,102 +94,12 @@
 %\newpage \onehalfspacing
 %\setcounter{page}{1}
 
-\begin{abstract}
-\end{abstract}
-
-\vspace{2cm}
-\section{Introduction}
 
 
 
 
-\section{Institutional Context and Data}\label{sec: context and data}
-
- This description of the institutional context heavily relies on the description by \textcite{boehm_intermediation_2024}.
-
-Chile operates a fully funded, defined-contribution pension system. Throughout their working lives, individuals are required to contribute 10\% of their wages to a personal retirement account. These accounts are managed by private Pension Fund Administrators (PFAs), who invest the funds in a mix of equities, bonds, and mutual funds. Upon reaching retirement age — 65 for men, 60 for women, or earlier in cases of sufficient accumulated wealth or disability — individuals must convert their savings into a stream of retirement income by selecting a pension product. Retirees are generally not allowed to make lump-sum withdrawals.
 
 
-\textbf{Pension products} Retirees opting for a Phased Withdrawal (PW) maintain their savings accounts under PFA management and make systematic withdrawals based on an actuarial formula set by the government. The withdrawal amount is updated annually, reflecting factors such as life expectancy based on a national mortality table, expected returns on investment, and the presence of any dependents (spouses or children under 24 years old). Under this arrangement, retirees retain ownership of their remaining savings, which can be passed on as an inheritance if they die prematurely. However, they bear the risk of outliving their savings, as pension payments decline over time until the account is depleted\footnote{If the pension falls below a threshold the government tops it up, which creates a distortion between the PW and the annuity because in the later case there is no government subsidy. The government also insures 75\% of the worker’s annuity over the MPG (with a cap of 45UF or about US\$1200 monthly) in case the insurance company becomes insolvent, and to prevent this from happening sets stringent reserve, equity and asset-liability matching requirements. So far it has never had to pay this insurance(\cite{james_pensiones_2005})}. Retirees under PW are also exposed to fluctuations in interest rates, leading to potential volatility in the value of their pension savings.
-
-As an alternative to the Phased Withdrawal, the retiree can purchase an annuity from an insurance company. This choice entails the individual giving up ownership of their savings in exchange for longevity insurance: the insurance company contracts an obligation to pay a fixed, inflation-adjusted amount for the remaining duration of the retiree’s lives. The retiree therefore transfers their longevity risk to the insurance company but gives up the possibility of bequeathing part of their pension savings.
-
-Retirees have the ability to tailor their annuity contracts, particularly by selecting guarantee and deferral options. A guarantee period ensures that the annuity will continue to make payments for a minimum period, offering some protection against early death while still allowing for a potential bequest. Retirees can also allocate a portion of their savings to purchase a deferred annuity, using the remaining balance to increase initial payouts. It is possible to combine guarantee and deferral features within a single contract.
-
-To assist with decision-making, retirees can request and receive multiple quotes through a centralized exchange platform (SCOMP), ultimately choosing among options listed in a document known as the Offers Certificate. The typical retiree requests quotes for around 10 different product types and receives more than 100 quotes overall.
-The range of available pension products involves inherent trade-offs among securing higher initial payments, insuring against longevity risk, and preserving wealth for heirs. Thus, selecting the optimal pension product depends critically on how product features interact with an individual's expected lifespan, desire to leave an inheritance, risk tolerance, and degree of impatience. Reaching a well-informed decision requires not only an understanding of financial concepts and contract terms but also a careful reflection on personal preferences, anticipated longevity, and the retiree’s broader financial circumstances. Given the complexity of these considerations and the documented gaps in financial literacy regarding pensions, this decision-making process can be both challenging and cognitively demanding for retirees.
-
-
-
-\textbf{Centralized exchange}
-
-By regulation, the process that leads to the purchase of an annuity takes place in SCOMP.  Established in 2004, SCOMP was designed to enhance retirees' access to information about their available options and to simplify the process of obtaining and comparing offers from various insurance companies and PFAs (CMF, 2019). Individuals who have accumulated savings above a minimum threshold can request quotes for annuities with different combinations of guarantee and deferral periods. These quote requests are circulated to all insurance companies active in the market, accompanied only by basic information: the retiree’s age, gender, marital status, the age of any legal beneficiaries, and the total amount of savings. Each insurer then decides whether to respond with a quote for each requested pension product.
-
- 
- 
-
- All offers — including Phased Withdrawal offers from PFAs and annuity offers from insurance companies — are compiled into a  document called the Offers Certificate, which is mailed to the retiree. All quotes must be stated in "UF," an inflation-indexed unit of account, ensuring that annuity values are presented in real terms. Figures \ref{fig:offer_PW} and \ref{fig:offer_ann2} illustrate the payments under a Phased Withdrawal and the range of annuity offers for a given year, while Figure \ref{fig:offer_ann2} displays offers for another year. Retirees also receive information about the risk rating assigned to each insurance company, an important consideration since retirees are only partially protected in the event of insurer insolvency. The median retiree requests quotes for 10 product types and receives over 100 quotes for pension products.  
-
-
-
-Once they receive the Offers Certificate, retirees can either accept one of the offers, postpone their decision, or attempt to negotiate directly with insurance companies to improve an existing offer. To negotiate, retirees must physically visit the branch of the insurance company. It is important to note that firms are prohibited from offering worse terms during this stage. On average, negotiated offers improve the initial terms modestly, with increases of around 2\% in generosity compared to the original SCOMP offers (\cite{illanes_retirement_2019}).
-
-\textcolor{red}{from here on is a copy of the institutional description of boehm }
-
- The number of retirees using SCOMP has increased through time, reaching over 50, 000 in 2018, at which point the annual value of the pension market was over 6 billion dollars . From 2004 onwards, 19 insurance companies have participated in the annuity market. For a majority of them, annuities constitute an important business line, making up over 60\% of both revenues and liabilities. Insurance companies are differentiated by their risk rating, an evaluation of their creditworthiness assessed periodically by two independent agencies. The regulator explicitly forbids the bundling of pension products with other types of insurance. Nevertheless, insurance companies might also differ in terms of their customer service, office locations and brand appeal.
-
-
-\begin{figure}
-    \centering
-    \includegraphics[width=0.5\linewidth]{figures/PW_flows.png}
-    \caption{Payments under PW (source \textcite{illanes_retirement_2019}}
-    \label{fig:offer_PW}
-\end{figure}
-
-\begin{figure}
-    \centering
-    \includegraphics[width=0.5\linewidth]{figures/annuity_offer.png}
-    \caption{Annuity offer (source \textcite{illanes_retirement_2019}}
-    \label{fig:offer_ann1}
-\end{figure}
-
-\begin{figure}
-    \centering
-    \includegraphics[width=0.5\linewidth]{figures/offer_certificate.png}
-    \caption{Annuity offer (source \textcite{boehm_intermediation_2024}}
-    \label{fig:offer_ann2}
-\end{figure}
-
-\vspace{3cm}
-\subsection{Policy variation}
-\begin{itemize}
-    \item \
-\end{itemize}
-\textcolor{red}{what has been the policy variation since 2004? }
-
-\textcite{alcalde_intermediary_nodate} study a refore where: \textit{
-Before the reform, both intermediaries received a commission of 2.5\% of the retiree’s retirement fund if the customer chose an annuity but no commission for programmed withdrawal. Advisers took payment in any event, but sales agents only got paid if the annuity came from his firm, and thus average commissions were lower for sales agents. The reform reduced the commission for annuities to 2\%, with a cap of approximately US\$2,500, starting in October 2008. Later, it introduced a commission—only for advisers— of 1.2\% for programmed withdrawal, with a cap of approximately US\$1,500, beginning in April 2009.}
-
-
-
-For a description of credit ratings and the risk of insurance companies see the \textcite[p.5]{aryal_auctioning_2021}
-
-For descriptive statistics tables see \textcite{aryal_auctioning_2021}
-\textcolor{red}{describe how beneficiaries are paired with brokers-intermediaries.} 
-
-For a motivation of what the SCOMP aimed to achieve and for further reforms after the 2004 reform see \textcite[section 3.2]{halcartegaray_efectos_2011}. 
-
-\subsection{Curious facts}
-
-\begin{itemize}
-    \item In the US the MWR of contracts is in the range .7-.85 (\cite{noauthor_lecture_annuities_nodate}) whereas in Chile they are greater than 1 (\cite{quiroz_estudio_2018}). 
-    \item 31\% of annuities in 2017 were for women and 69\% for men 
-
-
-    \item . Así, por ejemplo, se puede observar que una empresa en un año realizó la mejor oferta sólo un 2,3\% de las veces y se quedó con un 15,8\% de las rentas vitalicias. En el otro extremo, se observa que una empresa se ubicó en el primer lugar en un 29,5\% de los casos, pero sólo obtuvo 5,8\% de la participación de mercado. \textcite[p.13]{quiroz_estudio_2018}
-\end{itemize}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Data}
 There are already a couple of papers that have studied this market (\cite{boehm_intermediation_2024,illanes_retirement_2019,alcalde_intermediary_nodate} the data sources we could use are: 
@@ -260,8 +170,40 @@ There are a couple of other markets where sellers post a price and then the buye
     
 \end{itemize}
 
+\section{Estimation}
+Estimation of the demand model can be done via ML: 
+\begin{enumerate}
+    \item Estimate  ($\delta_{jt}, \alpha_k$) to maximize the likelihood 
+    \item Use $\mathbb{E}[\delta_{jt}|x_{jt},x_{-jt}]= 0$ to estimate ($\beta, \xi_j, \xi_{jt}$)
+\end{enumerate}
+
+Moreover, if we assume that firms use the mortality tables published by the regulator to create beliefs over the remaining time, then from equation \ref{eq:FOC_simplified} we can recover the financing costs of the firms. Note that in this case identifying firm-specific financing costs -firm specific $\bar{r}_{jt}$ would be possible. 
+
+The fixed cost is identified from the variation in choosing to apply for external offers. 
 
 
+
+
+
+
+\section{Counterfactuals.}
+
+Once we estimated the parameters, we can answer the questions that we are interested in. 
+
+i\textbf{Government guarantee}: we assume that implementing a government guarantee is equivalent to setting the credit rating of all the firms to the maximum possible level. We can use the model to change the product characteristics of the firms and use the model to estimate the changes in consumer welfare and to simulate what would be the impact of this policy on the interest rates set by the firms. 
+
+\textcolor{red}{SOMETHING TO THINK ABOUT: IF I WANT TO ESTIMATE THE IMPACT OF THE GOV. GUARANTEE ON THE ANNUITIZATION RATE I NEED TO PREDICT THE SHARE OF PEOPLE WHO CHOOSE A PHASED WITHDRAWAL AND HOW THIS CHANGES WITH THE POLICY, BUT THIS PEOPLE DO NOT EVEN GET OFFERS, CURRENTLY THE MODEL PREDICTS CHOICES GIVEN OFFERS, BUT THERE IS NO MODEL FOR THE DECISION OF PHASED WITHDRAWAL VS. ANNUITY.  }
+
+
+\section{Random thought}
+\begin{itemize}
+    \item Figures \ref{fig:offer_ann1} and \ref{fig:offer_ann2} appear to be the offer for different years. In the second case the offer does not include information on the financial ratings. If there is variation in the way the offers are presented one could use the variation to estimate the importance of the financial ratings, because in the second case they are not communicated in the offers. 
+
+    \item \textcite[p.16]{james_pensiones_2005} mentions the issue that annuitizations are exposed to interest rate risk. 
+\end{itemize}
+
+
+ 
 
 
 \newpage
